package runtime

import (
    "context"
    "fmt"
    "log"
    "os"
    "path/filepath"

    "github.com/neuro-fluidic-architecture/nfa-core/go/protos"
    "google.golang.org/grpc"
    "google.golang.org/grpc/credentials/insecure"
)

// IntentRuntime 负责向Intent Broker注册服务并处理意图请求
type IntentRuntime struct {
    brokerAddress string
    conn          *grpc.ClientConn
    client        protos.IntentBrokerClient
    serviceID     string
}

// NewIntentRuntime 创建新的运行时实例
func NewIntentRuntime(brokerAddress string) *IntentRuntime {
    return &IntentRuntime{
        brokerAddress: brokerAddress,
    }
}

// Connect 连接到Intent Broker
func (r *IntentRuntime) Connect() error {
    conn, err := grpc.Dial(r.brokerAddress, grpc.WithTransportCredentials(insecure.NewCredentials()))
    if err != nil {
        return fmt.Errorf("failed to connect to broker: %v", err)
    }
    r.conn = conn
    r.client = protos.NewIntentBrokerClient(conn)
    return nil
}

// RegisterFromFile 从YAML文件注册意图契约
func (r *IntentRuntime) RegisterFromFile(contractPath string) (string, error) {
    data, err := os.ReadFile(contractPath)
    if err != nil {
        return "", fmt.Errorf("failed to read contract file: %v", err)
    }

    // 解析YAML契约
    contract, err := ParseIntentContract(data)
    if err != nil {
        return "", fmt.Errorf("failed to parse contract: %v", err)
    }

    // 转换为gRPC格式并注册
    req := &protos.RegisterIntentRequest{
        Contract: contract.ToProto(),
    }

    resp, err := r.client.RegisterIntent(context.Background(), req)
    if err != nil {
        return "", fmt.Errorf("failed to register intent: %v", err)
    }

    r.serviceID = resp.ServiceId
    log.Printf("Service registered with ID: %s", r.serviceID)
    return r.serviceID, nil
}

// StartHealthCheck 启动健康检查循环
func (r *IntentRuntime) StartHealthCheck() {
    // 实现健康检查逻辑
    // 定期向Broker报告服务状态
}

// Close 关闭运行时连接
func (r *IntentRuntime) Close() error {
    if r.conn != nil {
        return r.conn.Close()
    }
    return nil
}

// ParseIntentContract 解析YAML格式的意图契约
func ParseIntentContract(data []byte) (*IntentContract, error) {
    // 实现YAML到内部结构的解析
    // 这里使用伪代码表示
    var contract IntentContract
    // yaml.Unmarshal(data, &contract)
    return &contract, nil
}

// IntentContract 内部表示的意图契约
type IntentContract struct {
    // 契约字段定义
}

// ToProto 转换为gRPC协议格式
func (c *IntentContract) ToProto() *protos.IntentContract {
    // 转换逻辑
    return &protos.IntentContract{}
}